# agente_prueba1

./: .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Jenkinsfile  README.md  README.rst  app.py  docker-compose.jenkins.yml  docker-compose.yml  install-jenkins-plugins.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  requirements.txt
examples/: train_mnist.py
models/: mnist_simple_nn.pth
src/agente_prueba1/: __init__.py  model.py  utils.py
tests/: conftest.py  test_integration.py  test_model.py  test_utils.py
